# arithmetics

./: Arithmetics.hs  arithmetics.cabal
